<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jlcsoftware.callrecorder.MainActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_lock_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"/>
</menu>
