<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jlcsoftware.callrecorder.MainActivity">

    <item
        android:id="@+id/onswitch"
        android:orderInCategory="100"
        android:title=""
        android:visible="true"
        app:actionLayout="@layout/actionbar_toggle2"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_whitelist"
        android:orderInCategory="100"
        android:title="@string/action_whitelist"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
